--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "apollo-boost": "^0.1.10",
     "apollo-link-context": "^1.0.8",
+    "babel-plugin-inline-dotenv": "^1.1.2",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "cookie": "^0.3.1",
     "graphql": "^0.13.2",
     "isomorphic-unfetch": "^2.0.0",
