--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "apollo-boost": "^0.1.20",
     "apollo-link-context": "^1.0.9",
     "cookie": "^0.3.1",
+    "dotenv-webpack": "^1.5.7",
     "graphql": "^14.0.2",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^7.0.2",
