--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "isomorphic-unfetch": "^3.0.0",
     "next": "^7.0.2",
     "prop-types": "^15.6.2",
+    "query-string": "~5.1.1",
     "react": "^16.6.0",
     "react-apollo": "^2.2.4",
     "react-dom": "^16.6.0",
